--- a/src/resources/scss/global.scss
+++ b/src/resources/scss/global.scss
@@ -1,5 +1,24 @@
 @import 'defaultSassImports.scss';
 
+@mixin swoosh($position, $height, $direction, $color, $left, $right) {
+	content: '';
+	position: absolute;
+	width: 100%;
+	z-index: 100;
+	height: $height;
+	background-color: $color;
+	clip-path: inset(0 0 0 0 round 0 0 $left $right);
+	@if $position == 'top' {
+		top: - $height;
+	} 
+	@if $position == 'bottom' {
+		bottom: - $height;
+	}
+	@if $direction == 'up' {
+		transform: rotateX(180deg);
+	}
+}
+
 .splash {
 	font-family: $font-family-titles;
 	background-color: purple;
@@ -93,12 +112,11 @@
 .extendedBenefits {
 	position: relative;
 	background-color: $even-darker-blue;
-	padding-bottom: 90px;
+	padding-bottom: $swooshHeight;
 }
 
 .company {
 	position: relative;
-	padding-bottom: 90px;
 
 	&__logos {
 		display: flex;
@@ -111,7 +129,6 @@
 
 		img {
 			margin-right: 10px;
-			display: none;
 
 			@include breakpoint($medium) {
 				margin-right: 0;
@@ -120,6 +137,7 @@
 			&:last-child {
 				margin-right: 0;
 			}
+			display: none;
 
 			&:nth-child(1),
 			&:nth-child(2) {
@@ -157,57 +175,34 @@
 	.row {
 		margin-top: 0;
 	}
-}
 
-.swoosh {
-	position: absolute;
-	left: 0;
-	top: -130px;
-	width: 100%;
-	height: $swooshHeight;
-	overflow: hidden;
-
-	&--inverted {
-		top: 0px;
-		transform: rotate(180deg);
+	&::before {
+		@include swoosh('top', $swooshHeight, 'up', white, 60%, 70%);
 	}
-
-	&__fold {
-		height: 130px;
-		width: 110vw;
-		border-bottom-left-radius: 41%;
-		border-bottom-right-radius: 41%;
-		box-shadow: 0 81px $bio-white;
-
-		section.extendedBenefits &,
-		section.company & {
-			box-shadow: 0 81px $even-darker-blue;
-		}
-
-		footer.footer & {
-			box-shadow: 0 81px $bio-gray;
-		}
+	
+	&::after {
+		@include swoosh('bottom', $swooshHeight, 'down', white, 60%, 70%);
 	}
 }
 
 .footer {
 	position: relative;
-	padding: ($includingSwooshPadding + 50px) 20px 0 20px;
+	padding: $swooshHeight 20px 0 20px;
 	background: $bio-gray;
 	color: $black;
 
 	@include breakpoint($medium) {
 		display: flex;
 		justify-content: space-between;
-		padding: $includingSwooshPadding 10vw 0 10vw;
+		padding: $swooshHeight 10vw 0 10vw;
 	}
 
 	@include breakpoint($large) {
-		padding: $includingSwooshPadding 15vw 0 15vw;
+		padding: $swooshHeight 15vw 0 15vw;
 	}
 
 	@include breakpoint($xlarge) {
-		padding: $includingSwooshPadding 18vw 0 15vw;
+		padding: $swooshHeight 18vw 0 15vw;
 	}
 	&__githubLogo {
 		position: absolute;
