feat(global-style): adjusted some stylings (splash bg, positioning)

--- a/src/components/BioButton/styles.scss
+++ b/src/components/BioButton/styles.scss
@@ -12,7 +12,7 @@
 		border-radius: 50px;
 		font-family: $font-family-titles;
 		font-size: 15px;
-		font-weight: $font-weight-bold;
+		font-weight: $font-weight-light;
 		text-transform: uppercase;
 		text-decoration: none;
 		text-align: center;
