--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -2,6 +2,7 @@
     data-resources="[{paths: ['components/BioGithubCorner/index.js']}]"></bio-github-corner>
 
 <header class="splash">
+    <img class="splash__bg" src="../_assets/splashscreen.svg" alt="">
     <div class="splash__intro">
         <img src="_assets/biotope-logo.svg" alt="" class="splash__logo">
         <div class="splash__content">
