--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -98,7 +98,7 @@
             <div class="company__leads">
                 <p>Need help setting up your frontend ecosystem? <br>
                     We love to support you.</p>
-                <bio-button title="Contact VI"
+                <bio-button title="Contact VI" modifier="full"
                     data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
             </div>
         </div>
