--- a/src/components/BioButton/styles.scss
+++ b/src/components/BioButton/styles.scss
@@ -40,7 +40,7 @@
         &.full {
             color: $bio-white;
 			background: linear-gradient(to top, $main-orange, $light-orange);
-			border: 2px solid transparent;
+			border: 2px solid $bio-white;
     
             &:before {
                 margin: 0;
