biotope website, BioScrollAnimation: - reduced number of option props in interface - added animation.json from Joachim Roschka - removed demo animation data - use Lottie instead of bodymovin to load and render animation - load animation via path with lottie instead of javascript fetch - disable scroll indicators of ScrollMagic - fixed responsive sizing of svg animation - added SEO text to bio-scroll-animation section

--- a/src/components/BioScrollAnimation/styles.scss
+++ b/src/components/BioScrollAnimation/styles.scss
@@ -2,25 +2,29 @@
 
 @include host('bio-scroll-animation') {
 
-	position: relative;
+	.animation-wrapper {
+		position: relative;
 
-	.scroll-trigger {
-		position: absolute;
-		top: 0;
-		left: 0;
-		height: 100vh;
-		width: 100vw;
-	}
+		.scroll-trigger {
+			position: absolute;
+			top: 0;
+			left: 0;
+			height: 100vh;
+			width: 100vw;
+		}
 
-	.animation-container {
-		margin: auto 0;
-		width: auto;
-		height: 100vh;
-	}
+		.animation-container {
+			height: 100vh;
+			width: 100vw;
 
-	/* svg custom styles */
-	/* TODO: remove #robotBG for final version! */
-	#robotBG path {
-		fill: #fff;
+			svg {
+				width: 100%;
+				height: 100%;
+
+				/* add custom styles for svg content here if required */
+			}
+		}
 	}
 }
+
+
