--- a/src/components/BioScrollAnimation/scaffolding/BioScrollAnimation.hbs
+++ b/src/components/BioScrollAnimation/scaffolding/BioScrollAnimation.hbs
@@ -1,9 +1,25 @@
 <bio-scroll-animation
-	animation-data-url="/components/BioScrollAnimation/demoAnimationData.json"
-	scroll-duration="1000"
-	scroll-factor="0.9"
+	animation-data-path="/components/BioScrollAnimation/animation.json"
+	scroll-duration="10000"
+	scroll-factor="1"
 	data-resources="[{
 	paths: [
 		'components/BioScrollAnimation/index.js'
 	]}]" >
+
+	<h2>Build</h2>
+	<p>Build web components fast, Biotope cares about polyfilling and templating.</p>
+
+	<h2>Adopt</h2>
+	<p>Lorem Ipsum dolor sit amet, Lorem Ipsum dolor sit amet, Lorem Ipsum</p>
+
+	<h2>Collaborate</h2>
+	<p>Collaborate web components fast, Biotope cares about polyfilling and templating.</p>
+
+	<h2>Distribute</h2>
+	<p>Distribute web components fast, Biotope cares about polyfilling and templating.</p>
+
+	<h2>Maintain</h2>
+	<p>Maintain web components fast, Biotope cares about polyfilling and templating.</p>
+
 </bio-scroll-animation>
