biotope website, BioScrollAnimation: cleanup

--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -55,7 +55,7 @@
     </div>
 </section>
 
-<section class="scroll-animation">
+<section class="scrollAnimation">
 	{{bioInclude 'components/BioScrollAnimation/scaffolding/BioScrollAnimation' }}
 </section>
 
