--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -55,6 +55,10 @@
     </div>
 </section>
 
+<section class="scrollAnimation">
+	{{bioInclude 'components/BioScrollAnimation/scaffolding/BioScrollAnimation' }}
+</section>
+
 <section class="extendedBenefits">
     <div class="row row--reducedWidth">
         <div class="col">
