created BioRsource component started mobile implementation

--- a/src/resources/scss/global.scss
+++ b/src/resources/scss/global.scss
@@ -59,6 +59,14 @@
 	}
 }
 
+.resources{
+	padding-bottom: 90px;
+	background: $bio-gray;
+	.col{
+		margin-top: 0;
+	}
+}
+
 .benefits {
 	position: relative;
 	padding-bottom: 90px;
