--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -54,6 +54,36 @@
     </div>
 </section>
 
+<section class="resources">
+        <div class="row row--reducedWidth">
+            <div class="col">
+                <bio-resource logo-baseline data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/github-logo.svg">
+                    <p>See the Bioto.pe code on GitHub</p>
+                    <div class="buttonWrapper">
+                        <bio-button title="Github" modifier="blue" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
+                    </div>
+                </bio-resource>
+
+            </div>
+            <div class="col">
+                <bio-resource data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/logo-man.svg">
+                    <p>Get the latest version of the Biotope CLI tool from npm</p>
+                    <div class="buttonWrapper">
+                        <bio-button title="NPM" modifier="blue" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
+                    </div>
+                </bio-resource>
+            </div>
+            <div class="col">
+                <bio-resource data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/logo-man.svg">
+                    <p>Get the latest version of the Biotope CLI tool from npm</p>
+                    <div class="buttonWrapper">
+                        <bio-button title="Read Docs" modifier="blue" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
+                    </div>
+                </bio-resource>
+            </div>
+        </div>
+</section>
+
 <section class="extendedBenefits">
     <div class="row row--reducedWidth">
         <div class="col">
