finish resources section for desktop and tablet. button adjustments required from button branch

--- a/src/components/BioResource/scaffolding/BioResource.hbs
+++ b/src/components/BioResource/scaffolding/BioResource.hbs
@@ -1,1 +1,3 @@
 <bio-resource data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="../../_assets/icon-agnostic.png"></bio-resource>
+<bio-resource image-border-color="blue" data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="../../_assets/icon-agnostic.png"></bio-resource>
+<bio-resource image-border-color="blue" data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="../../_assets/icon-agnostic.png" border="noBorder"></bio-resource>
