--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -57,27 +57,50 @@
 <section class="resources">
         <div class="row row--reducedWidth">
             <div class="col">
-                <bio-resource logo-baseline data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/github-logo.svg">
+                <h3 class="resources__headline--blue">Code & Resources</h3>
+                <bio-resource logo-baseline image-border-color="blue" data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/github-logo.svg">
                     <p>See the Bioto.pe code on GitHub</p>
                     <div class="buttonWrapper">
                         <bio-button title="Github" modifier="blue" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
                     </div>
                 </bio-resource>
-
-            </div>
-            <div class="col">
-                <bio-resource data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/logo-man.svg">
+                <bio-resource image-border-color="blue" data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/npm.svg">
                     <p>Get the latest version of the Biotope CLI tool from npm</p>
                     <div class="buttonWrapper">
                         <bio-button title="NPM" modifier="blue" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
                     </div>
                 </bio-resource>
+                <bio-resource image-border-color="blue" data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/documentation.svg">
+                    <p>Read the Bioto.pe documentation</p>
+                    <div class="buttonWrapper">
+                        <bio-button title="Read docs" modifier="blue" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
+                    </div>
+                </bio-resource>
             </div>
             <div class="col">
-                <bio-resource data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/logo-man.svg">
-                    <p>Get the latest version of the Biotope CLI tool from npm</p>
+                <h3>Tutorials</h3>
+                <bio-resource data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/tutorial.svg">
+                    <p>Create Web Components with Biotope-Element</p>
                     <div class="buttonWrapper">
-                        <bio-button title="Read Docs" modifier="blue" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
+                        <bio-button title="Watch" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
+                    </div>
+                </bio-resource>
+                <bio-resource data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/tutorial.svg">
+                    <p>Asynchronously load components with Biotope-Resource-Loader</p>
+                    <div class="buttonWrapper">
+                        <bio-button title="Watch" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
+                    </div>
+                </bio-resource>
+                <bio-resource data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/tutorial.svg">
+                    <p>Automate your Build process with Biotope-Build</p>
+                    <div class="buttonWrapper">
+                        <bio-button title="Watch" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
+                    </div>
+                </bio-resource>
+                <bio-resource data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/expert.svg" border="noBorder">
+                    <p>You want to learn more? Ask an expert.</p>
+                    <div class="buttonWrapper">
+                        <bio-button modifier="full" title="Contact" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
                     </div>
                 </bio-resource>
             </div>
