--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -109,17 +109,21 @@
     </div>
 </section>
 <footer class="footer">
-    <a href="#">
-        <img class="footer__githubLogo" src="_assets/github-logo.svg" alt="github octo-cat">
-    </a>
-    <div class="footer__checkItOut">
-        <p>Of course we also built<br><span class="footer__bigWords">this website</span> with biotope.</p>
-        <bio-button title="Check it out" modifier="blue" data-resources="[{paths: ['components/BioButton/index.js']}]">
-        </bio-button>
-    </div>
-    <div class="footer__essentials">
-        <a href="#">Imprint</a>
-        <a href="#">Privacy Policy</a>
-        <a href="#">About VI</a>
+    <div class="row row--reducedWidth">
+        <div class="col">
+            <a href="#">
+                <img class="footer__githubLogo" src="_assets/github-logo.svg" alt="github octo-cat">
+            </a>
+            <div class="footer__checkItOut">
+                <p>Of course we also built<br><span class="footer__bigWords">this website</span> with biotope.</p>
+                <bio-button title="Check it out" modifier="blue" data-resources="[{paths: ['components/BioButton/index.js']}]">
+                </bio-button>
+            </div>
+            <div class="footer__essentials">
+                <a href="#">Imprint</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">About VI</a>
+            </div>
+        </div>
     </div>
 </footer>
