biotope website, BioScrollAnimation: - implemented automatic "snap to slides" instead of a linear scroll animation. - updated animation data from Jogi (but still not final! issue: animation slides are not of equal duration) - updated SEO text in scaffolding

--- a/src/components/BioScrollAnimation/scaffolding/BioScrollAnimation.hbs
+++ b/src/components/BioScrollAnimation/scaffolding/BioScrollAnimation.hbs
@@ -1,6 +1,8 @@
 <bio-scroll-animation
 	animation-data-path="/components/BioScrollAnimation/animation.json"
-	scroll-duration="10000"
+	slides="6"
+	slide-duration="2000"
+	scroll-length="12000"
 	scroll-factor="1"
 	data-resources="[{
 	paths: [
@@ -11,15 +13,24 @@
 	<p>Build web components fast, Biotope cares about polyfilling and templating.</p>
 
 	<h2>Adopt</h2>
-	<p>Lorem Ipsum dolor sit amet, Lorem Ipsum dolor sit amet, Lorem Ipsum</p>
+	<p>your components for any of your projects. Biotope ensures they work in any framework: React, Angular, Vue, you name it.</p>
+
 
 	<h2>Collaborate</h2>
-	<p>Collaborate web components fast, Biotope cares about polyfilling and templating.</p>
+	<p>with third parties on your component pool knowing that biotope’s in-built quality gate ensures all standards within the ecosystem are met.</p>
+
 
 	<h2>Distribute</h2>
-	<p>Distribute web components fast, Biotope cares about polyfilling and templating.</p>
+	<p>your web components from a single location – not for every website and app individually.</p>
+
 
 	<h2>Maintain</h2>
-	<p>Maintain web components fast, Biotope cares about polyfilling and templating.</p>
+	<p>the appearance of all your digital outlets simultaneously. Thanks to Biotope’s dynamic Design System you can easily change and apply style and branding guidelines at any time.</p>
+
+
+	<h2>Worry</h2>
+	<p>no more about outdated infrastructures, incompatible tools and extortionate maintenance costs. Change a logo when you need to, not your whole setup. The use of Biotope already pays off if you
+		manage more than one digital product.</p>
+	<p>Want to know more about what Biotope can do for you?</p>
 
 </bio-scroll-animation>
