feat(biomodal): implement first steps of bioModal
re #42

--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -33,8 +33,12 @@
                         Bioto.pe’s web-component-based frontend ecosystem conrols entire Design Systems via a single
                         repository. Add, change and reuse web components as many times you want - anywhere
                     </bio-paragraph>
-                    <bio-button title="Who's behind biotope" modifier="long"
+                    <bio-button class="js-openModal" title="Who's behind biotope" modifier="long"
                         data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
+                    <bio-modal data-resources="[{paths: ['components/BioModal/index.js']}]">
+                        GAGAGAGA
+                    </bio-modal>
+
                 </div>
             </div>
             <div class="benefits__container">
