--- a/src/resources/scss/settings/_settings.scss
+++ b/src/resources/scss/settings/_settings.scss
@@ -21,6 +21,7 @@ $darker-blue: #1F1F43;
 $even-darker-blue: #0A0A2C;
 $light-blue: #87FBE1;
 $lightest-blue: #CED0DF;
+$shadow-gray: #d3d3d3;
 
 // BODY STYLES
 $body-bg: $bio-white;
