--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -73,7 +73,7 @@
                 </bio-easy-set-up>
                 <bio-easy-set-up position="left" data-resources="[{paths: ['components/BioEasySetUp/index.js']}]" imgsrc="_assets/BioEasySetUp/2.svg" alt="step two">
                     <p>Just one command and a few simple questions to generate all you need for your project</p>
-                    <code>Biotope create myEcosystem</code>
+                    <code>biotope create myEcosystem</code>
                 </bio-easy-set-up>
                 <bio-easy-set-up data-resources="[{paths: ['components/BioEasySetUp/index.js']}]" imgsrc="_assets/BioEasySetUp/3.svg" alt="step three">
                     <p>Install the included build-ststem that helps you to automatically build product-ready resources</p>
@@ -81,11 +81,11 @@
                 </bio-easy-set-up>
                 <bio-easy-set-up position="left" data-resources="[{paths: ['components/BioEasySetUp/index.js']}]" imgsrc="_assets/BioEasySetUp/4.svg" alt="step four">
                     <p>Install the included build-ststem that helps you to automatically build product-ready resources</p>
-                    <code>npm install</code>
+                    <code>npm start</code>
                 </bio-easy-set-up>
                 <bio-easy-set-up data-resources="[{paths: ['components/BioEasySetUp/index.js']}]" imgsrc="_assets/BioEasySetUp/5.svg" alt="step five">
                     <p>Install the included build-ststem that helps you to automatically build product-ready resources</p>
-                    <code>npm install</code>
+                    <code>biotope generate</code>
                 </bio-easy-set-up>
             </div>
         </div>
