--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -36,9 +36,15 @@
                     <bio-button class="js-openModal" title="Who's behind biotope" modifier="long"
                         data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
                     <bio-modal data-resources="[{paths: ['components/BioModal/index.js']}]">
-                        GAGAGAGA
+                        <div>
+                            <h3>
+                                Hello, headline here
+                            </h3>
+                            <p>
+                                Hello this is a paragraph
+                            </p>
+                        </div>
                     </bio-modal>
-
                 </div>
             </div>
             <div class="benefits__container">
