--- a/src/resources/scss/global.scss
+++ b/src/resources/scss/global.scss
@@ -21,21 +21,12 @@
 
 .splash {
 	font-family: $font-family-titles;
-	height: 800px;
-	// padding-bottom: 66%;
-	// background: url(../../_assets/splashscreen.svg);
-	// background-size: cover;
-	// background-position: center 75%;
+	height: 110vh;
+	background-image: url(../../_assets/splashscreen.svg);
+	background-size: cover;
+	background-repeat: no-repeat;
 	color: $main-orange;
-	overflow: hidden;
 
-	&__bg {
-		position: absolute;
-		top: -140px;
-		left: 50%;
-		transform: translateX(-50%);
-		width: 2060px;
-	}
 
 	&__intro {
 		display: flex;
@@ -43,6 +34,10 @@
 		margin: 0 auto;
 		width: 815px;
 		padding-top: 200px;
+
+		@include breakpoint($large) {
+			padding-top: 300px;
+		}
 	}
 
 	&__content {
@@ -139,6 +134,10 @@
 	}
 
 	.row {
+		margin-top: 0;
+	}
+
+	.col {
 		margin-top: 0;
 	}
 }
