--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -2,7 +2,7 @@
     data-resources="[{paths: ['components/BioGithubCorner/index.js']}]"></bio-github-corner>
 
 <header class="splash">
-    <img class="splash__bg" src="../_assets/splashscreen.svg" alt="">
+    {{!-- <img class="splash__bg" src="../_assets/splashscreen.svg" alt="harmonious biotope space"> --}}
     <div class="splash__intro">
         <img src="_assets/biotope-logo.svg" alt="" class="splash__logo">
         <div class="splash__content">
@@ -55,9 +55,9 @@
     </div>
 </section>
 
-<section class="scrollAnimation">
+{{!-- <section class="scrollAnimation">
 	{{bioInclude 'components/BioScrollAnimation/scaffolding/BioScrollAnimation' }}
-</section>
+</section> --}}
 
 <section class="resources">
         <div class="row row--reducedWidth">
