--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -35,16 +35,6 @@
                     </bio-paragraph>
                     <bio-button class="js-openModal" title="Who's behind biotope" modifier="long"
                         data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
-                    <bio-modal data-resources="[{paths: ['components/BioModal/index.js']}]">
-                        <div>
-                            <h3>
-                                Hello, headline here
-                            </h3>
-                            <p>
-                                Hello this is a paragraph
-                            </p>
-                        </div>
-                    </bio-modal>
                 </div>
             </div>
             <div class="benefits__container">
@@ -129,3 +119,19 @@
         <a href="#">About VI</a>
     </div>
 </footer>
+
+<bio-modal data-resources="[{paths: ['components/BioModal/index.js']}]">
+    <h3>
+        Who's behind Biotope
+    </h3>
+    <bio-collaborator-list>
+        <bio-collaborator-tile imgsrc="../_assets/free.svg" type="core">Marc Emmanuel</bio-collaborator-tile>
+        <bio-collaborator-tile imgsrc="../_assets/free.svg" type="core">Tiago Marques</bio-collaborator-tile>
+        <bio-collaborator-tile imgsrc="../_assets/free.svg" type="core">Timo Mayer</bio-collaborator-tile>
+        <bio-collaborator-tile imgsrc="../_assets/free.svg" type="core">Danny Stey</bio-collaborator-tile>
+        <bio-collaborator-tile imgsrc="../_assets/free.svg" type="collab">Dominikus Weiger</bio-collaborator-tile>
+        <bio-collaborator-tile imgsrc="../_assets/free.svg" type="collab">Lukas Müller</bio-collaborator-tile>
+        <bio-collaborator-tile imgsrc="../_assets/free.svg" type="collab">Benny Konopka</bio-collaborator-tile>
+        <bio-collaborator-tile imgsrc="../_assets/free.svg" type="collab">Chris Hummel</bio-collaborator-tile>
+    </bio-collaborator-list>
+</bio-modal>
