biotope website, BioScrollAnimation: - added dynamic ans interactive slide controls - new markup and data structure for slides - generic creation of slides data structure based on sections in markup - removed obsolete props and attributes - dispatch custom event 'bioScrollAnimation.showSlide', required for tracking - fixed width of animation-wrapper

--- a/src/components/BioScrollAnimation/scaffolding/BioScrollAnimation.hbs
+++ b/src/components/BioScrollAnimation/scaffolding/BioScrollAnimation.hbs
@@ -1,36 +1,46 @@
 <bio-scroll-animation
 	animation-data-path="/components/BioScrollAnimation/animation.json"
-	slides="7"
 	slide-duration="2000"
 	scroll-length="14000"
-	scroll-factor="1"
 	data-resources="[{
 	paths: [
 		'components/BioScrollAnimation/index.js'
 	]}]" >
 
-	<h2>Build</h2>
-	<p>Build web components fast, Biotope cares about polyfilling and templating.</p>
+	<section class="animation-slide">
+		<h2>Build</h2>
+		<p>Build web components fast, Biotope cares about polyfilling and templating.</p>
+	</section>
 
-	<h2>Adopt</h2>
-	<p>your components for any of your projects. Biotope ensures they work in any framework: React, Angular, Vue, you name it.</p>
+	<section class="animation-slide">
+		<h2>Adopt</h2>
+		<p>your components for any of your projects. Biotope ensures they work in any framework: React, Angular, Vue, you name it.</p>
+	</section>
 
+	<section class="animation-slide">
+		<h2>Collaborate</h2>
+		<p>with third parties on your component pool knowing that biotope’s in-built quality gate ensures all standards within the ecosystem are met.</p>
+	</section>
 
-	<h2>Collaborate</h2>
-	<p>with third parties on your component pool knowing that biotope’s in-built quality gate ensures all standards within the ecosystem are met.</p>
+	<section class="animation-slide">
+		<h2>Distribute</h2>
+		<p>your web components from a single location – not for every website and app individually.</p>
+	</section>
 
+	<section class="animation-slide">
+		<h2>Maintain</h2>
+		<p>the appearance of all your digital outlets simultaneously. Thanks to Biotope’s dynamic Design System you can easily change and apply style and branding guidelines at any time.</p>
+	</section>
 
-	<h2>Distribute</h2>
-	<p>your web components from a single location – not for every website and app individually.</p>
+	<section class="animation-slide">
+		<h2>Worry</h2>
+		<p>no more about outdated infrastructures, incompatible tools and extortionate maintenance costs. Change a logo when you need to, not your whole setup. The use of Biotope already pays off if
+			you manage more than one digital product.</p>
+	</section>
 
-
-	<h2>Maintain</h2>
-	<p>the appearance of all your digital outlets simultaneously. Thanks to Biotope’s dynamic Design System you can easily change and apply style and branding guidelines at any time.</p>
-
-
-	<h2>Worry</h2>
-	<p>no more about outdated infrastructures, incompatible tools and extortionate maintenance costs. Change a logo when you need to, not your whole setup. The use of Biotope already pays off if you
-		manage more than one digital product.</p>
-	<p>Want to know more about what Biotope can do for you?</p>
+	<section class="animation-slide">
+		<h2>More for you</h2>
+		<p>Want to know more about what Biotope can do for you?</p>
+	</section>
 
 </bio-scroll-animation>
