--- a/src/layouts/includes/scripts.hbs
+++ b/src/layouts/includes/scripts.hbs
@@ -8,4 +8,5 @@
 <script src="resources/ts/handlebars.helper.js"></script>
 <script src="resources/js/handlebars.templates.js"></script>
 <script src="resources/ts/main.js"></script>
+<script src="resources/ts/tracking.js"></script>
 <!-- endbuild -->
