--- a/src/layouts/layout.default.hbs
+++ b/src/layouts/layout.default.hbs
@@ -17,6 +17,11 @@
 
 <body role="document" class="{{bodyClass}}">
 
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5ZKW795"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
+
 	{{bioInclude (lookup . 'contentMain') }}
 
 	{{bioInclude 'layouts/includes/scripts' }}
