--- a/src/resources/scss/global.scss
+++ b/src/resources/scss/global.scss
@@ -25,6 +25,7 @@
 	background-image: url(../../_assets/splashscreen.svg);
 	background-size: cover;
 	background-repeat: no-repeat;
+	background-position: center; 
 	color: $main-orange;
 
 
