--- a/src/components/BioScrollAnimation/styles.scss
+++ b/src/components/BioScrollAnimation/styles.scss
@@ -11,12 +11,12 @@
 			top: 0;
 			left: 0;
 			height: 100vh;
-			width: 100%;
+			width: 100vw;
 		}
 
 		.animation-container {
 			height: 100vh;
-			width: 100%;
+			width: 100vw;
 
 			svg {
 				width: 100%;
