added button functionality to buttons with # and buttons with links

--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -11,9 +11,9 @@
                 One web component library. As many worlds as you want. Decide what the future looks like.
             </p>
             <bio-button title="Explore" modifier="whiteText"
-                data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
+                data-resources="[{paths: ['components/BioButton/index.js']}]" url="#resources"></bio-button>
             <bio-button title="See Docs" modifier="blue whiteText"
-                data-resources="[{paths: ['components/BioButton/index.js']}]">
+                data-resources="[{paths: ['components/BioButton/index.js']}]" url="https://build.biotope.sh">
             </bio-button>
         </div>
     </div>
@@ -90,21 +90,21 @@
         </div>
 </section>
 
-<section class="resources">
+<section class="resources" id="resources">
         <div class="row row--reducedWidth">
             <div class="col col--large-6">
                 <h3 class="resources__headline--blue">Code & Resources</h3>
                 <bio-resource logo-baseline image-border-color="blue" data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/github-logo.svg">
                     <p>See the Bioto.pe code on GitHub</p>
-                    <bio-button title="Github" modifier="blue"></bio-button>
+                    <bio-button title="Github" modifier="blue" url="https://github.com/biotope"></bio-button>
                 </bio-resource>
                 <bio-resource image-border-color="blue" data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/npm.svg">
                     <p>Get the latest version of the Biotope CLI tool from npm</p>
-                    <bio-button title="NPM" modifier="blue"></bio-button>
+                    <bio-button title="NPM" modifier="blue" url="https://www.npmjs.com/package/biotope"></bio-button>
                 </bio-resource>
                 <bio-resource image-border-color="blue" data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/documentation.svg">
                     <p>Read the Bioto.pe documentation</p>
-                    <bio-button title="Read docs" modifier="blue"></bio-button>
+                    <bio-button title="Read docs" modifier="blue" url="https://build.biotope.sh"></bio-button>
                 </bio-resource>
             </div>
             <div class="col col--large-6">
@@ -186,7 +186,7 @@
             </a>
             <div class="footer__checkItOut">
                 <p>Of course we also built<br><span class="footer__bigWords">this website</span> with biotope.</p>
-                <bio-button title="Check it out" modifier="blue" data-resources="[{paths: ['components/BioButton/index.js']}]">
+                <bio-button title="Check it out" modifier="blue" data-resources="[{paths: ['components/BioButton/index.js']}]" url="https://github.com/biotope/website">
                 </bio-button>
             </div>
             <div class="footer__essentials">
