--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -58,6 +58,16 @@
 	{{bioInclude 'components/BioScrollAnimation/scaffolding/BioScrollAnimation' }}
 </section>
 
+<section class="knowMore">
+	<div class="row row--reducedWidth">
+		<div class="col">
+			<p>Want to know more about what Biotope can do for you?</p>
+			<bio-button title="Get in touch" url="mailto:biotope@virtual-identity.com"
+				data-resources="[{paths: ['components/BioButton/index.js']}]" modifier="large"></bio-button>
+		</div>
+	</div>
+</section>
+
 <section class="soEasy">
         <div class="row row--reducedWidth">
             <div class="col">
