--- a/src/components/BioButton/styles.scss
+++ b/src/components/BioButton/styles.scss
@@ -1,4 +1,5 @@
 @import "node_modules/@biotope/element/lib/host.mixin";
+@import '../../resources/scss/defaultSassImports.scss';
 @import "../../resources/scss/settings/settings";
 
 @include host("bio-button") {
@@ -58,5 +59,21 @@
 			padding: 10px 10px;
 			width: 230px;
         }
+
+		&.large {
+			@include breakpoint($large) {
+				padding: 12px 36px;
+				font-size: 20px;
+				border-width: 3px;
+				width: auto;
+			}
+
+			@include breakpoint($xlarge) {
+				padding: 15px 48px;
+				font-size: 25px;
+				border-width: 4px;
+				width: auto;
+			}
+		}
 	}
 }
