updated latest animation data and text optimized position of slide controls

--- a/src/components/BioScrollAnimation/scaffolding/BioScrollAnimation.hbs
+++ b/src/components/BioScrollAnimation/scaffolding/BioScrollAnimation.hbs
@@ -1,7 +1,7 @@
 <bio-scroll-animation
 	animation-data-path="/components/BioScrollAnimation/animation.json"
 	slide-duration="1500"
-	scroll-length="14000"
+	scroll-length="12000"
 	data-resources="[{
 	paths: [
 		'components/BioScrollAnimation/index.js'
@@ -9,38 +9,32 @@
 
 	<section class="animation-slide">
 		<h2>Build</h2>
-		<p>Build web components fast, Biotope cares about polyfilling and templating.</p>
+		<p>the Web Components you need for your project. Not the architecture and tools around it. That’s what Biotope is for</p>
 	</section>
 
 	<section class="animation-slide">
 		<h2>Adopt</h2>
-		<p>your components for any of your projects. Biotope ensures they work in any framework: React, Angular, Vue, you name it.</p>
+		<p>your components for any of your digital projects. Biotope ensures they work with any framework: React, Angular, Vue, you name it.</p>
 	</section>
 
 	<section class="animation-slide">
 		<h2>Collaborate</h2>
-		<p>with third parties on your component pool knowing that biotope’s in-built quality gate ensures all standards within the ecosystem are met.</p>
+		<p>across several teams or a company on your component pool. Biotope’s in-built quality gate ensures all standards within the ecosystem are met – no matter what tech stack is used.</p>
 	</section>
 
 	<section class="animation-slide">
 		<h2>Distribute</h2>
-		<p>your web components from a single location – not for every website and app individually.</p>
+		<p>your Web Components simultaneously from a single location – not for every website and app individually.</p>
 	</section>
 
 	<section class="animation-slide">
 		<h2>Maintain</h2>
-		<p>the appearance of all your digital outlets simultaneously. Thanks to Biotope’s dynamic Design System you can easily change and apply style and branding guidelines at any time.</p>
+		<p>a consistent appearance throughout all of your digital outlets. Easily enforce style and branding guidelines.</p>
 	</section>
 
 	<section class="animation-slide">
-		<h2>Worry</h2>
-		<p>no more about outdated infrastructures, incompatible tools and extortionate maintenance costs. Change a logo when you need to, not your whole setup. The use of Biotope already pays off if
-			you manage more than one digital product.</p>
-	</section>
-
-	<section class="animation-slide">
-		<h2>More for you</h2>
-		<p>Want to know more about what Biotope can do for you?</p>
+		<h2>Stay ahead</h2>
+		<p>of changing infrastructures and tools. Reduce design debt, energy and extortionate maintenance costs. The use of Biotope already pays off if you manage more than one digital product.</p>
 	</section>
 
 </bio-scroll-animation>
