--- a/src/components/BioScrollAnimation/styles.scss
+++ b/src/components/BioScrollAnimation/styles.scss
@@ -1,5 +1,5 @@
 @import "node_modules/@biotope/element/lib/host.mixin";
-@import "../../resources/scss/settings/settings";
+@import '../../resources/scss/defaultSassImports.scss';
 
 @include host('bio-scroll-animation') {
 
@@ -33,9 +33,10 @@
 			opacity: 0;
 			transition: opacity 300ms;
 			position: fixed;
-			bottom: 0;
+			top: 75%;
+			-webkit-transform: translate(0, -75%);
+			transform: translate(0, -75%);
 			right: 0;
-
 
 			li {
 				&:first-child {
@@ -74,9 +75,8 @@
 				opacity: 1;
 			}
 
-			@media (min-width: 500px) {
+			@include breakpoint($small) {
 				top: 50%;
-				bottom: initial;
 				right: 18px;
 				-webkit-transform: translate(0, -50%);
 				transform: translate(0, -50%);
