--- a/src/resources/scss/global.scss
+++ b/src/resources/scss/global.scss
@@ -71,7 +71,7 @@
 
 .knowMore {
 	background: linear-gradient(90deg, $bg-light-blue-gray 0%, $bg-blue-gray 100%);
-	color: $dark-blue-grey;
+	color: $dark-blue-gray;
 	padding: 50px 0 75px;
 	text-align: center;
 	p {
