improving button styling

--- a/src/components/BioButton/styles.scss
+++ b/src/components/BioButton/styles.scss
@@ -5,7 +5,7 @@
 	button {
 		$border: 2px;
 
-		width: 160px;
+		min-width: 160px;
 		padding: 10px 20px;
 		background: transparent;
 		color: $black;
@@ -55,8 +55,7 @@
 		}
 		
         &.long {
-			padding: 10px 10px;
-			width: 230px;
+			padding: 10px 15px;
         }
 	}
 }
