--- a/src/resources/scss/global.scss
+++ b/src/resources/scss/global.scss
@@ -202,6 +202,23 @@
 	position: relative;
 	background-color: $even-darker-blue;
 	padding-bottom: $swooshHeight;
+
+	&__container {
+		padding: 100px 0;
+
+		@include clearfix();
+		@include breakpoint($medium) {
+			@include span(10);
+			float: none;
+			margin: 0 auto;
+		}
+
+		bio-benefit {
+			@include breakpoint($medium) {
+				@include span(4);
+			}
+		}
+	}
 }
 
 .company {
