--- a/src/components/BioModal/styles.scss
+++ b/src/components/BioModal/styles.scss
@@ -1,10 +1,11 @@
 @import 'node_modules/@biotope/element/lib/host.mixin';
+@import '../../resources/scss/defaultSassImports.scss';
 
 @include host('bio-modal') {
 	.modal {
 		.content {
 			display: none;
-			z-index: 20;
+			z-index: 11;
 			position: fixed;
 			padding: 5%;
 			top: 5%;
@@ -12,7 +13,7 @@
 			bottom: 5%;
 			right: 5%;
 			box-sizing: border-box;
-			background-color: white;
+			background-color: $bio-white;
 			overflow-y: scroll;
 
 			.modal-close {
@@ -34,7 +35,7 @@
 			width: 100%;
 			background: #000;
 			opacity: 0.5;
-			z-index: 19;
+			z-index: 10;
 		}
 
 		&.open {
